@@ -1,10 +1,24 @@
- /*
- *
- * jRails form observer plugin
- * version 0.2
- * <aaron@ennerchi.com> | http://www.ennerchi.com
- * 
- */
+﻿/*
+*
+* jRails ajax extras
+* version 0.1
+* <aaron@ennerchi.com> | http://www.ennerchi.com
+* 
+*/
+
+(function($) {
+  $().ajaxSend(function(a, xhr, s){ //Set request headers globally
+    xhr.setRequestHeader("Accept", "text/javascript, text/html, application/xml, text/xml, */*");
+  });
+})(jQuery);
+
+/*
+*
+* jRails form observer plugin
+* version 0.2
+* <aaron@ennerchi.com> | http://www.ennerchi.com
+* 
+*/
 
 (function($) {
   $.extend({ // Translate field to event
@@ -61,13 +75,13 @@
   });
 })(jQuery);
 
- /*
- *
- * jRails visual effects stubs
- * version 0.1
- * <aaron@ennerchi.com> | http://www.ennerchi.com
- * 
- */
+/*
+*
+* jRails visual effects stubs
+* version 0.1
+* <aaron@ennerchi.com> | http://www.ennerchi.com
+* 
+*/
 
 (function($) {
   $.fn.extend({
@@ -156,40 +170,5 @@
       this.show('clip', {}, speed, callback); 
       return this;
     }
-  });
-})(jQuery);
-
- /*
- * [ 0.2 ] Original by Jonathan Howard
- * [ 0.3 ] Updated for current jQuery releases,
- *         and formatted for jQuery namespace by Charles Phillips
- *         <charles@doublerebel.com> | http://www.doublerebel.com/scripts/jquery.pause.js
- *
- * jQuery Pause
- * version 0.3
- *
- */
- 
-(function($) {
-  $.fn.extend({
-    pause: function(milli,type) {
-      milli = milli || 1000;
-      type = type || "fx";
-      return this.queue(type,function(){
-        var self = this;
-        setTimeout(function(){
-          $(self).dequeue();
-        },milli);
-      });
-    },
-    clearQueue: function(type) {
-      return this.each(function(){
-        type = type || "fx";
-        if(this.queue && this.queue[type]) {
-          this.queue[type].length = 0;
-        }
-      });
-    },
-    unpause: $.fn.clearQueue
   });
 })(jQuery);
